--- a/style/header.scss
+++ b/style/header.scss
@@ -187,5 +187,9 @@
     #velocity-navbar .navbar-menu .nav-item:first-child {
         display: none;
     }
+    // #velocity-navbar .navbar-menu .nav-dropdown {
+    //     display: block !important;
+    //     position: static !important;
+    // }
 }
 
