--- a/style/sidebar.scss
+++ b/style/sidebar.scss
@@ -4,10 +4,9 @@
 }
 
 .filters-menu {
-
+    display: none;
     font-weight: 300;
     font-family: "HelveticaNeue Thin", "Helvetica", Helvetica, Arial, sans-serif;
-    font-size: 18px;
     font-stretch: normal;
     position: absolute;
     left: 0px;
@@ -20,7 +19,6 @@
         padding: 0;
         background: #f7f7f7;
         > li {
-            min-width: 300px;
             display: block;
             color: #999;
             position: relative;
@@ -45,24 +43,19 @@
             }
         }
     }
+    .filter-item.active {
+      background: #47a3da;
+      color: #fff;
+    }
     &.active {
-        display: none;
+        display: block;
+        // display: inline-block;
         -webkit-transition: all 0.5s ease;
         -moz-transition: all 0.5s ease;
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease;
     }
 
-    // A hack to offset the positioning to top right
-    .dropright-container {
-        display: inline;
-        padding: 0;
-        margin: 0;
-        position: relative;
-        width: auto;
-        // top: 0%;
-        left: 100%;
-    }
     .visible-container {
         text-align: center;
         padding-left: 10px;
@@ -70,21 +63,18 @@
         padding-top: 25px;
         padding-bottom: 15px;
     }
-    .hover .dropright {
-        display: inline-block;
-        position: absolute;
-        // width: auto;
-        width: 768px;
-        white-space: no-wrap;
-        .dropright-nav > ul > li {
-            // display: inline-block;
-        }
+    &:not(.hasActiveChildren) .hover .dropright, .filter-item.active .dropright{
+        display: block;
     }
     .dropright {
+        padding: 0;
+        margin: 0;
+        position: absolute;
+        left: 100%;
+        top: -1px;
         display: none;
     }
 }
-
 
 .filters-toggle {
     position: absolute;
@@ -109,104 +99,40 @@
     color: #fff;
 }
 
-/* Icon Wobble Horizontal */
-@-webkit-keyframes hvr-icon-wobble-horizontal {
-  16.65% {
-    -webkit-transform: translateX(6px);
-    transform: translateX(6px);
-  }
-
-  33.3% {
-    -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
-  }
-
-  49.95% {
-    -webkit-transform: translateX(4px);
-    transform: translateX(4px);
-  }
-
-  66.6% {
-    -webkit-transform: translateX(-2px);
-    transform: translateX(-2px);
-  }
-
-  83.25% {
-    -webkit-transform: translateX(1px);
-    transform: translateX(1px);
-  }
-
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-@keyframes hvr-icon-wobble-horizontal {
-  16.65% {
-    -webkit-transform: translateX(6px);
-    transform: translateX(6px);
-  }
-
-  33.3% {
-    -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
-  }
-
-  49.95% {
-    -webkit-transform: translateX(4px);
-    transform: translateX(4px);
-  }
-
-  66.6% {
-    -webkit-transform: translateX(-2px);
-    transform: translateX(-2px);
-  }
-
-  83.25% {
-    -webkit-transform: translateX(1px);
-    transform: translateX(1px);
-  }
-
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-.hvr-icon-wobble-horizontal {
+.sidebar-container {
   display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-  position: relative;
-  padding-right: 2.2em;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-}
-.hvr-icon-wobble-horizontal:before {
-  content: "\f061";
-  position: absolute;
-  right: 1em;
-  padding: 0 1px;
-  font-family: FontAwesome;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-}
-.hvr-icon-wobble-horizontal:hover:before, .hvr-icon-wobble-horizontal:focus:before, .hvr-icon-wobble-horizontal:active:before {
-  -webkit-animation-name: hvr-icon-wobble-horizontal;
-  animation-name: hvr-icon-wobble-horizontal;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
 }
 
 
-
+@media (min-width: 1080px) {
+  .filters-menu {
+    font-size: 18px;
+    > ul > li {
+        min-width: 280px;
+    }
+  }
+}
+@media (min-width: 800px) and (max-width: 1080px) {
+  .filters-menu {
+    font-size: 16px;
+    > ul > li {
+        min-width: 200px;
+    }
+  }
+}
+@media (min-width: 640px) and (max-width: 800px) {
+  .filters-menu {
+    font-size: 14px;
+    > ul > li {
+        min-width: 150px;
+    }
+  }
+}
+@media (max-width: 640px) {
+  .filters-menu {
+    font-size: 12px;
+    > ul > li {
+        min-width: 100px;
+    }
+  }
+}
