--- a/style/dropright.scss
+++ b/style/dropright.scss
@@ -1,254 +1,127 @@
-/* Global CSS that are applied for all screen sizes */
+.dropright-nav {
+    ul {
+        max-width: 1240px;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-flow: row nowrap;
+        align-self: center;
+        list-style: none;
+        font-weight: 300;
+        box-shadow: 5px 5px 10px grey;
 
-.dropright-nav ul {
-    max-width: 1240px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    font-weight: 300;
-}
-
-.dropright-nav li span {
-    display: block;
-}
-
-.dropright-nav a {
-    display: block;
-    color: rgba(249, 249, 249, .9);
-    text-decoration: none;
-}
-
-.dropright-nav i{
-    /* Make the font smoother for Chrome */
-    transform: translate3d(0, 0, 0);
-}
-
-/* Remove the blue Webkit background when element is tapped */
-
-a, button {
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-
-/* Hover effect for the whole navigation to make the hovered item stand out */
-
-.dropright-nav ul:hover a {
-    color: rgba(249, 249, 249, .5);
-}
-
-.dropright-nav ul:hover a:hover {
-    color: rgba(249, 249, 249, 0.99);
-}
-
-
-.dropright-nav li:nth-child(4n+1) {
-    background: rgb(22, 145, 190);
-}
-
-.dropright-nav li:nth-child(4n+2) {
-    background: rgb(22, 107, 162);
-}
-
-.dropright-nav li:nth-child(4n+3) {
-    background: rgb(27, 54, 71);
-}
-
-.dropright-nav li:nth-child(4n+4) {
-    background: rgb(21, 40, 54);
-}
-
-@media (min-width: 800px) {
-
-    /* Transforms the list into a horizontal navigation */
-    .dropright-nav li {
-        float: left;
-        min-width: 150px;
-        text-align: center;
-        padding: 18px;
-        transition: border .5s;
+        li {
+            float: left;
+            transition: border .5s;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            color: rgba(249, 249, 249, .9);
+        }
     }
 
-    .dropright-nav a {
-        display: block;
-        width: auto;
-    }
-    /* hover, focused and active effects that add a little colored border to the different items */
-
-    .no-touch .dropright-nav li:nth-child(4n+1) a:hover,
-    .no-touch .dropright-nav li:nth-child(4n+1) a:active,
-    .no-touch .dropright-nav li:nth-child(4n+1) a:focus {
-        border-bottom: 4px solid rgb(12, 110, 149);
-    }
-
-    .no-touch .dropright-nav li:nth-child(4n+2) a:hover,
-    .no-touch .dropright-nav li:nth-child(4n+2) a:active,
-    .no-touch .dropright-nav li:nth-child(4n+2) a:focus {
-        border-bottom: 4px solid rgb(10, 75, 117);
-    }
-
-    .no-touch .dropright-nav li:nth-child(4n+3) a:hover,
-    .no-touch .dropright-nav li:nth-child(4n+3) a:active,
-    .no-touch .dropright-nav li:nth-child(4n+3) a:focus {
-        border-bottom: 4px solid rgb(16, 34, 44);
-    }
-
-    .no-touch .dropright-nav li:nth-child(4n+4) a:hover,
-    .no-touch .dropright-nav li:nth-child(4n+4) a:active,
-    .no-touch .dropright-nav li:nth-child(4n+4) a:focus {
-        border-bottom: 4px solid rgb(9, 18, 25);
-    }
-
-
-    .no-touch .dropright-nav a:hover ,
-    .no-touch .dropright-nav a:active ,
-    .no-touch .dropright-nav a:focus {
-        // height: 10em;
-    }
-
-    /* Making the text follow the height animation */
-    .no-touch .dropright-nav a:hover .icon + span {
-        margin-top: 3.2em;
-        transition: margin .5s;
-    }
-
-    /* Positioning the icons and preparing for the animation*/
-    .dropright-nav i {
-        position: relative;
-        display: inline-block;
-        margin: 0 auto;
-        padding: 0.4em;
-        border-radius: 50%;
-        font-size: 1.8em;
-        box-shadow: 0 0 0 0.8em transparent;
-        background: rgba(255,255,255,0.1);
+    i {
+        /* Make the font smoother for Chrome */
         transform: translate3d(0, 0, 0);
-        transition: box-shadow .6s ease-in-out;
     }
 
-    /* Animate the box-shadow to create the effect */
-    .no-touch .dropright-nav a:hover i,
-    .no-touch .dropright-nav a:active i,
-    .no-touch .dropright-nav a:focus i {
-        box-shadow: 0 0 0px 0px rgba(255,255,255,0.2);
-        transition: box-shadow .4s ease-in-out;
+    /* Hover effect for the whole navigation to make the hovered item stand out */
+    ul:hover li {
+        color: rgba(249, 249, 249, .5);
+    }
+
+    ul:hover li:hover {
+        color: rgba(249, 249, 249, 0.99);
+    }
+
+
+    li:nth-child(4n+1) {
+        background: rgb(22, 145, 190);
+    }
+
+    li:nth-child(4n+2) {
+        background: rgb(22, 107, 162);
+    }
+
+    li:nth-child(4n+3) {
+        background: rgb(27, 54, 71);
+    }
+
+    li:nth-child(4n+4) {
+        background: rgb(21, 40, 54);
     }
 }
 
-
-/* The "tablet" and "mobile" version */
-
-@media (max-width: 49.938em) {
-
-    .no-touch .dropright-nav li:nth-child(4n+1) a:hover,
-    .no-touch .dropright-nav li:nth-child(4n+1) a:active,
-    .no-touch .dropright-nav li:nth-child(4n+1) a:focus {
-        background: rgb(44, 168, 219);
-    }
-
-    .no-touch .dropright-nav li:nth-child(4n+2) a:hover,
-    .no-touch .dropright-nav li:nth-child(4n+2) a:active,
-    .no-touch .dropright-nav li:nth-child(4n+2) a:focus {
-        background: rgb(31, 120, 176);
-    }
-
-    .no-touch .dropright-nav li:nth-child(4n+3) a:hover,
-    .no-touch .dropright-nav li:nth-child(4n+3) a:active,
-    .no-touch .dropright-nav li:nth-child(4n+3) a:focus {
-        background: rgb(39, 70, 90);
-    }
-
-    .no-touch .dropright-nav li:nth-child(4n+4) a:hover,
-    .no-touch .dropright-nav li:nth-child(4n+4) a:active,
-    .no-touch .dropright-nav li:nth-child(4n+4) a:focus {
-        background: rgb(32, 54, 68);
-    }
-
-    .dropright-nav ul li {
-        transition: background 0.5s;
-    }
-
-}
-
-/* CSS for a 2x3 columns version */
-
-@media (min-width: 32.5em) and (max-width: 49.938em) {
-
-    /* Creating the 2 column layout using floating elements once again */
+@media (min-width: 1300px) {
     .dropright-nav li {
-        display: block;
-        float: left;
-        width: 50%;
+        width: 180px !important;
+        padding: 19px !important;
     }
+}
 
-    /* Adding some padding to make the elements look nicer*/
-    .dropright-nav a {
-        padding: 0.8em;
+@media (min-width: 640px) {
+    .dropright-nav {
+        i {
+            /* Positioning the icons in the circle */
+            position: relative;
+            display: inline-block;
+            margin: 0 auto;
+            padding: 0.4em;
+            border-radius: 50%;
+            font-size: 1.8em;
+            box-shadow: 0 0 0 0.8em transparent;
+            background: rgba(255,255,255,0.1);
+            transform: translate3d(0, 0, 0);
+            transition: box-shadow .6s ease-in-out;
+        }
+        li {
+            text-align: center;
+            span {
+                display: block;
+            }
+        }
     }
+}
 
-    /* Displaying the icons on the left, and the text on the right side using inline-block */
-    .dropright-nav li span,
-    .dropright-nav li span.icon {
-        display: inline-block;
+
+@media (min-width: 1080px) {
+    .dropright-nav li {
+        width: 156px;
+        padding: 20px;
     }
+}
 
-    .dropright-nav li span.icon {
-        width: 50%;
-    }
 
-    .dropright-nav li .icon + span {
-        font-size: 1em;
-    }
-
-    .icon + span {
-        position: relative;
-        top: -0.2em;
-    }
-
-    /* Adapting the icons to animate the size and border of the rounded background in a more discreet way */
-    .dropright-nav li i {
-        display: inline-block;
-        padding: 8% 9%;
-        border: 4px solid transparent;
-        border-radius: 50%;
-        font-size: 1.5em;
-        background: rgba(255,255,255,0.1);
-        transition: border .5s;
-    }
-
-    /* Transition effect on the border color */
-    .no-touch .dropright-nav li:hover i,
-    .no-touch .dropright-nav li:active i,
-    .no-touch .dropright-nav li:focus i {
-        border: 4px solid rgba(255,255,255,0.1);
+@media (min-width: 800px) and (max-width: 1080px) {
+    .dropright-nav li {
+        width: 120px;
+        padding: 11px;
     }
 }
 
 /* Adapting the font size and width for smaller screns*/
-@media (min-width: 32.5em) and (max-width: 38.688em) {
-
-    .dropright-nav li span.icon {
-        width: 50%;
-    }
-
-    .dropright-nav li .icon + span {
-        font-size: 0.9em;
+@media (min-width: 640px) and (max-width: 800px) {
+    .dropright-nav li {
+        width: 95px;
+        padding: 9px;
     }
 }
 
-@media (max-width: 32.438em) {
+@media (max-width: 640px) {
 
     /* Adapting the layout of the menu for smaller screens: icon on the left and text on the right */
-    .dropright-nav li span {
-        display: inline-block;
-        height: 100%;
+    .dropright-nav ul {
+        display: inline-block !important;
     }
 
-    .dropright-nav a {
+    .dropright-nav li {
+        width: 200px;
         padding: 0.5em;
+        display: block !important;
     }
 
     .icon + span {
         margin-left: 1em;
-        font-size: 0.8em;
     }
     /* Adding a left border of 8 px with a different color for each menu item*/
     .dropright-nav li:nth-child(4n+1) {
@@ -267,3 +140,5 @@ a, button {
         border-left: 8px solid rgb(9, 18, 25);
     }
 }
+
+
