--- a/style/main.scss
+++ b/style/main.scss
@@ -6,6 +6,25 @@
 @import 'dropright';
 @import 'metric';
 @import 'tabbed-data-container';
+@import 'wobble-icon';
+@import '../static/css/kinesis';
+@import '../node_modules/react-datepicker/dist/react-datepicker.css';
+
+input {
+  color: black;
+  font-size: 13px;
+  border-radius: 4px;
+  box-shadow: inset 0 2px 2px #e9e9e9;
+  border: 1px solid #aeaeae;
+  line-height: 16px;
+  width: 90px;
+  padding: 6px 10px 5px; }
+  input:focus {
+    outline: none;
+    border-color: #aeaeae;
+    color: black;
+    box-shadow: inset 0 2px 2px #e9e9e9, 0 0 10px 0 rgba(73, 107, 125, 0.3); }
+
 
 @font-face{
     font-family:"HelveticaNeue Thin";
